[gd_scene load_steps=22 format=3 uid="uid://dq06tkbxkyap6"]

[ext_resource type="Script" uid="uid://btv0xyj306pca" path="res://player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://dj00dnvygb2hq" path="res://barbarian.tscn" id="2_onrkg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4flbx"]
radius = 0.67421
height = 2.18883

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_onrkg"]
radius = 0.271928
height = 0.725513

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2hs0m"]
animation = &"1H_Melee_Attack_Slice_Diagonal"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1jxqw"]
animation = &"1H_Melee_Attack_Slice_Horizontal"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dw050"]
animation = &"Lie_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sweqy"]
animation = &"1H_Melee_Attack_Chop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_onrkg"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i3pqv"]
animation = &"Running_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hqtel"]
animation = &"Walking_A"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sweqy"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b26j0"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"!is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ivps1"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"is_attacking"
advance_expression = "is_attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_urp6f"]
switch_mode = 2
advance_mode = 2
advance_expression = "!is_attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_onrkg"]
xfade_time = 0.2
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i3pqv"]
xfade_time = 0.2
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1jxqw"]
advance_mode = 2
advance_condition = &"is_attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n7ghd"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nvl01"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1jxqw"]
"states/1H diagonal /node" = SubResource("AnimationNodeAnimation_2hs0m")
"states/1H diagonal /position" = Vector2(271, 318)
"states/1H horizontal/node" = SubResource("AnimationNodeAnimation_1jxqw")
"states/1H horizontal/position" = Vector2(271, 383)
states/Lie_Down/node = SubResource("AnimationNodeAnimation_dw050")
states/Lie_Down/position = Vector2(202, 107.198)
states/Start/position = Vector2(86, 100)
states/chop/node = SubResource("AnimationNodeAnimation_sweqy")
states/chop/position = Vector2(255, 260)
states/idle/node = SubResource("AnimationNodeAnimation_onrkg")
states/idle/position = Vector2(385, 102)
states/run/node = SubResource("AnimationNodeAnimation_i3pqv")
states/run/position = Vector2(747, 217)
states/walk/node = SubResource("AnimationNodeAnimation_hqtel")
states/walk/position = Vector2(571, 80)
transitions = ["idle", "walk", SubResource("AnimationNodeStateMachineTransition_sweqy"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_b26j0"), "idle", "chop", SubResource("AnimationNodeStateMachineTransition_ivps1"), "chop", "idle", SubResource("AnimationNodeStateMachineTransition_urp6f"), "walk", "run", SubResource("AnimationNodeStateMachineTransition_onrkg"), "run", "walk", SubResource("AnimationNodeStateMachineTransition_i3pqv"), "run", "chop", SubResource("AnimationNodeStateMachineTransition_1jxqw"), "Start", "Lie_Down", SubResource("AnimationNodeStateMachineTransition_n7ghd"), "Lie_Down", "idle", SubResource("AnimationNodeStateMachineTransition_nvl01")]
graph_offset = Vector2(-85, 39.198)

[node name="player" type="CharacterBody3D" groups=["player"]]
collision_mask = 114
script = ExtResource("1_4flbx")

[node name="Hurtbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.67188, 0)
shape = SubResource("CapsuleShape3D_4flbx")

[node name="Model" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.599385, 0)
skeleton = NodePath("")

[node name="Barbarian" parent="Model" instance=ExtResource("2_onrkg")]

[node name="Skeleton3D" parent="Model/Barbarian/Rig" index="0"]
bones/1/position = Vector3(0, 0.37039, 0)
bones/1/rotation = Quaternion(-1.11123e-10, 0.0431578, 2.57241e-09, 0.999068)
bones/2/rotation = Quaternion(-6.93889e-18, 7.10543e-15, 4.93038e-32, 1)
bones/3/rotation = Quaternion(8.27181e-25, 3.72529e-09, -2.75506e-40, 1)
bones/4/position = Vector3(0.212007, 0.134132, 7.92996e-08)
bones/4/rotation = Quaternion(-0.552114, -0.0565485, -0.637442, 0.534453)
bones/5/rotation = Quaternion(3.71554e-08, -6.25547e-08, -0.516183, 0.856478)
bones/7/rotation = Quaternion(-0.321605, -0.338129, 0.150304, 0.871578)
bones/8/position = Vector3(8.34843e-10, 0.0961252, -0.0575)
bones/8/rotation = Quaternion(0.000890076, 0.000890072, -0.703832, 0.710366)
bones/11/position = Vector3(-0.212007, 0.134132, 8.6814e-08)
bones/11/rotation = Quaternion(-0.610646, 0.0770487, 0.613033, 0.495345)
bones/12/rotation = Quaternion(2.32143e-08, 4.59093e-08, 0.538524, 0.84261)
bones/14/rotation = Quaternion(-0.320642, 0.314353, -0.232487, 0.86274)
bones/15/position = Vector3(-1.5736e-08, 0.0961251, -0.0575)
bones/15/rotation = Quaternion(0.00281281, 0.00331308, 0.704179, 0.710009)
bones/19/rotation = Quaternion(-5.80608e-11, -0.0313417, -1.88012e-09, 0.999509)
bones/22/position = Vector3(0.170945, 0.113587, 1.59941e-08)
bones/22/rotation = Quaternion(0.989829, 0.0836397, 0.0785614, 0.084085)
bones/23/rotation = Quaternion(0.387152, 5.71577e-08, -2.64646e-07, 0.922016)
bones/24/rotation = Quaternion(-0.617372, -0.201309, 0.0752989, 0.756741)
bones/25/rotation = Quaternion(-9.74065e-09, 0.920355, -0.391084, 7.8309e-08)
bones/26/position = Vector3(-0.170945, 0.113587, 1.55755e-08)
bones/26/rotation = Quaternion(0.991736, -0.0331862, 0.0298773, 0.120275)
bones/27/rotation = Quaternion(0.432084, -5.92601e-08, 3.00673e-07, 0.901833)
bones/28/rotation = Quaternion(-0.643674, 0.112607, -0.022684, 0.75663)
bones/29/rotation = Quaternion(3.03591e-08, 0.920355, -0.391084, -6.95338e-08)
bones/30/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/31/position = Vector3(0.202182, 0.0259903, 0.205181)
bones/31/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/32/rotation = Quaternion(9.65792e-09, 1.77955e-09, 0.985719, -0.168398)
bones/33/position = Vector3(-2.60494e-08, 0.213436, -5.1715e-09)
bones/33/rotation = Quaternion(-1.01273e-07, 0.391084, 0.920355, -3.35091e-08)
bones/34/position = Vector3(8.58988e-09, 0.16565, -2.40963e-09)
bones/35/rotation = Quaternion(1, -2.33136e-09, 1.99777e-07, -1.34211e-15)
bones/37/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/38/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/39/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/40/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/40/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/41/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/42/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/44/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/45/position = Vector3(0.520841, 0.7759, -0.0576374)
bones/45/rotation = Quaternion(0.794627, -1.11759e-07, 0.607098, -5.96046e-08)
bones/46/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/47/position = Vector3(-0.510844, 0.7759, 0.0597369)
bones/47/rotation = Quaternion(-0.758253, -1.52737e-07, 0.651961, -1.11759e-08)

[node name="1H_Axe_Offhand" parent="Model/Barbarian/Rig/Skeleton3D" index="0"]
transform = Transform3D(8.40612e-07, 0.262863, 0.964832, 0.999953, -0.00924057, 0.00251694, 0.00957765, 0.964788, -0.262851, 0.51613, 0.624068, 0.0148618)

[node name="1H_Axe_Offhand" parent="Model/Barbarian/Rig/Skeleton3D/1H_Axe_Offhand" index="0"]
visible = false

[node name="Barbarian_Round_Shield" parent="Model/Barbarian/Rig/Skeleton3D" index="1"]
transform = Transform3D(6.29121e-07, 0.262863, 0.964832, 0.999953, -0.00924309, 0.00251784, 0.00958032, 0.964788, -0.262851, 0.662249, 0.624611, -0.0418362)

[node name="1H_Axe" parent="Model/Barbarian/Rig/Skeleton3D" index="2"]
transform = Transform3D(-0.00197072, -0.158446, 0.987365, 0.999965, -0.0082489, 0.000671741, 0.00803859, 0.987333, 0.158457, -0.495664, 0.628661, 0.140736)

[node name="1H_Axe" parent="Model/Barbarian/Rig/Skeleton3D/1H_Axe" index="0"]
transform = Transform3D(0.999953, -0.00969381, 0.000757306, 0.00968557, 0.999901, 0.0101809, -0.000855672, -0.0101731, 0.999948, 0.100848, -0.00200295, -0.000622481)

[node name="2H_Axe" parent="Model/Barbarian/Rig/Skeleton3D" index="3"]
transform = Transform3D(-0.00197072, -0.158446, 0.987365, 0.999965, -0.0082489, 0.000671741, 0.00803859, 0.987333, 0.158457, -0.495664, 0.628661, 0.140736)

[node name="2H_Axe" parent="Model/Barbarian/Rig/Skeleton3D/2H_Axe" index="0"]
visible = false

[node name="Mug" parent="Model/Barbarian/Rig/Skeleton3D" index="4"]
transform = Transform3D(-0.00197072, -0.158446, 0.987365, 0.999965, -0.0082489, 0.000671741, 0.00803859, 0.987333, 0.158457, -0.487316, 0.328509, 0.0899943)

[node name="Barbarian_Hat" parent="Model/Barbarian/Rig/Skeleton3D" index="5"]
transform = Transform3D(0.99972, -1.40143e-09, 0.0236466, 1.39341e-09, 1, 3.55686e-10, -0.0236466, -3.22637e-10, 0.99972, -7.55726e-09, 1.1806, -1.39052e-07)
visible = true

[node name="Barbarian_Cape" parent="Model/Barbarian/Rig/Skeleton3D" index="6"]
transform = Transform3D(0.996275, -5.14962e-09, 0.0862353, 5.13043e-09, 1, 4.44077e-10, -0.0862353, 1.88007e-15, 0.996275, -1.91641e-06, 1.1806, 2.59003e-08)

[node name="Barbarian_ArmLeft" parent="Model/Barbarian/Rig/Skeleton3D" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.118467, 0)

[node name="Barbarian_ArmRight" parent="Model/Barbarian/Rig/Skeleton3D" index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.118467, 0)

[node name="Barbarian_Body" parent="Model/Barbarian/Rig/Skeleton3D" index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.118467, 0)

[node name="Barbarian_Head" parent="Model/Barbarian/Rig/Skeleton3D" index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.118467, 0)

[node name="Barbarian_LegLeft" parent="Model/Barbarian/Rig/Skeleton3D" index="11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.118467, 0)

[node name="Barbarian_LegRight" parent="Model/Barbarian/Rig/Skeleton3D" index="12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.118467, 0)

[node name="Hitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.638654, 0)
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, -0.0929267, -0.995673, 0, 0.995673, -0.0929267, -0.62426, 0.55727, 0.786419)
shape = SubResource("CapsuleShape3D_onrkg")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Model/Barbarian")
tree_root = SubResource("AnimationNodeStateMachine_1jxqw")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../Model/Barbarian/AnimationPlayer")
parameters/conditions/!is_moving = false
parameters/conditions/is_attacking = false
parameters/conditions/is_moving = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]

[editable path="Model/Barbarian"]
